[package]
name = "aago"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"

[profile.release]
strip = true
opt-level = "z"
lto = true
